--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon src/index.ts",
-    "dev:start": "NODE_ENV=development nodemon dist/index.js  \"build\" \"build:watch\" \"dev:watch\" \"prettier:watch\"",
+    "dev:start": "NODE_ENV=development nodemon dist/telegram_bot/brainiacBot.js nodemon dist/index.js node \"build\" \"build:watch\" \"dev:watch\" \"prettier:watch\"",
     "lint": "eslint . --ext .ts",
     "start:dev": "npx nodemon",
     "build": "rimraf ./build && tsc",
@@ -17,7 +17,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/connect": "^3.4.35",
+    "@types/method-override": "^0.0.32",
+    "@types/mime": "^3.0.1",
     "@types/node": "^18.15.5",
+    "@types/qs": "^6.9.7",
+    "@types/range-parser": "^1.2.4",
+    "@types/serve-static": "^1.15.1",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "body-parser": "^1.20.2",
@@ -35,10 +41,12 @@
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.17",
     "@types/express-serve-static-core": "^4.17.33",
+    "abort-controller": "^3.0.0",
     "axios": "^1.3.4",
     "compression": "^1.7.4",
     "connect": "^3.7.0",
     "dotenv": "^16.0.3",
+    "event-target-shim": "^6.0.2",
     "grammy": "^1.15.3",
     "jsonl": "^1.1.2",
     "jsonlines": "^0.1.1",
@@ -48,10 +56,12 @@
     "rimraf": "^4.4.1",
     "serve-static": "^1.15.0",
     "telegraf": "^4.12.2",
+    "telegram": "^2.15.15",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "tsc": "^2.0.4",
     "typegram": "^5.0.0",
+    "typescript": "^5.0.4",
     "webpack": "^5.76.3"
   }
 }
